CSS: Fix task detail spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -107,4 +107,5 @@ input[type="submit"] {
 
 .app {
   display: block;
+  height: 100%;
 }
