--- a/app/assets/stylesheets/comments.css
+++ b/app/assets/stylesheets/comments.css
@@ -6,6 +6,7 @@
   border-top: 1px solid;
   border-color: #D3D3D3;
   max-height: 442px;
+  min-height: 70px;
 }
 
 .comment-form-avatar {
@@ -19,8 +20,7 @@
 }
 
 .comment-button {
-  margin-top: 8%;
-  margin-bottom: 4px;
+  margin-top: 10%;
   margin-left: 2px;
   display: inline-block;
   font-size: 14px;
