--- a/app/assets/stylesheets/task-detail.css
+++ b/app/assets/stylesheets/task-detail.css
@@ -73,13 +73,12 @@
   display: flex;
   flex-direction: column;
   padding-left: 45px;
+  min-height: 167.5px;
 }
 
 .task-detail-content {
   display: flex;
   flex-direction: column;
-  border-bottom: 1px solid;
-  border-color: #d3d3d3;
   width: 90%;
   height: 70%;
 }
@@ -87,6 +86,7 @@
 .task-detail-project {
   padding-top: 10px;
   padding-bottom: 10px;
+  min-height: 50px;
 }
 
 .task-detail-footer {
@@ -100,33 +100,26 @@
 .task-detail-description {
   font-size: 14px;
   line-height: 20px;
-  padding: 10px;
+  padding: 7px;
   width: 100%;
   height: 75%;
   margin-bottom: 4px;
 }
 
-.task-detail-description-text-area {
-  border: 1px solid;
-  border-color: red;
-  min-width: 100%;
-  min-height: 20%;
-}
-
-.task-detail-description:hover, .task-detail-description:focus  {
+/*.task-detail-description:hover, .task-detail-description:focus  {
   border: 1px solid;
   border-color: #d3d3d3;
-}
+}*/
 
 .task-detail-title-button {
   display: flex;
   align-items: center;
 }
-
+/*
 .task-detail-title-button:hover, task-detail-title-button:focus {
   border: 1px solid;
   border-color: #d3d3d3;
-}
+}*/
 
 .task-detail-title {
   padding: 20px;
