--- a/app/assets/stylesheets/tasks.css
+++ b/app/assets/stylesheets/tasks.css
@@ -1,7 +1,7 @@
 .tasks {
   background-color: #F8F8F9;
   background-image: linear-gradient(to bottom,#F8F8F9, #EFF0F1);
-  height: 100%;
+  height: 96%;
   display: flex;
   justify-content: space-around;;
   align-items: center;
@@ -74,7 +74,7 @@
 
 .task-list-item {
   min-height: 24px;
-  border-bottom: 1px solid;
+  /*border-bottom: 1px solid;*/
   border-color: #d3d3d3;
   width: 92%;
   padding-top: 5px;
@@ -83,7 +83,7 @@
 }
 
 .selected-task-list-item {
-  border-bottom: 1px solid;
+  /*border-bottom: 1px solid;*/
   border-color: #75cdef;
   padding-top: 5px;
   padding-bottom: 5px;
@@ -92,7 +92,7 @@
 }
 
 .task-list-item:after {
-  padding: 10px;
+  /*padding: 10px;*/
 }
 
 .completed-task-list-item {
@@ -103,7 +103,8 @@
   display:inline-block;
   background-color: #898E95;
   min-width: 22px;
-  min-height:22px;
+  min-height: 22px;
+  max-height: 22px;
   background: white;
   border-radius:50%;
   -ms-transform: rotate(45deg); /* IE 9 */
@@ -154,6 +155,7 @@
   background-color: #b3fcd1;
   min-width: 22px;
   min-height:22px;
+  max-height: 22px;
   background: #b3fcd1;
   border-radius:50%;
   -ms-transform: rotate(45deg); /* IE 9 */
@@ -184,18 +186,10 @@
 }
 
 .completed-task-list-item {
-  border-bottom: 1px solid;
   border-color: #d3d3d3;
   color: #B9BCC0;
   width: 92%;
   padding-top: 5px;
   padding-bottom: 5px;
   transition: all .2s;
-}
-
-.task-list-item-title {
-  padding-left: 10px;
-  font-size: 14px;
-  color: #1B2432;
-  width: 100%;
 }
